k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: zwollemina
  labels:
    app: website
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: website
